[project]
name = "baby-sleep-bot"
version = "0.1.0"
description = "Telegram bot for baby sleep scheduling"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.31.0",
    "pydantic>=2.13.3",
    "pydantic-settings>=2.14.0",
    "python-telegram-bot>=21.0",
    "pytz>=2026.2",
    "sqlalchemy[asyncio]>=2.0.49",
]
